Arrumando a tabela de atualização das contas cadastradas

--- a/index.html
+++ b/index.html
@@ -12,21 +12,43 @@
 
     <div class="container">
 
-        <form class="input-button" >
+        <form class="input-button">
             <input required name="name" type="name" class="texarea" placeholder="Nome">
             <input required name="email" type="email" class="texarea" placeholder="Email">
             <input required name="tel" type="tel" class="texarea" placeholder="Telefone">
             <input required name="cpf" type="text" class="texarea" placeholder="Cpf">
-            <button type="submit" class="botao-cadastrar">cadastrar</button>
-        </form>
+            <button type="submit" class="botao-cadastrar">Cadastrar</button>
+        </form><!--input-button-->
 
-<hr color="grey">
+        <hr color="grey">
 
         <ul class="lista__cadastros">
-            
+
         </ul>
 
-    </div>
+        <!-- <form class="informacoes-editar">
+
+            <label for="">Nome:</label>
+            <input required name="name" type="name" class="editarea">
+
+
+            <label for="">E-mail:</label>
+            <input required name="email" type="email" class="editarea">
+
+
+            <label for="">Telefone:</label>
+            <input required name="tel" type="tel" class="editarea">
+
+
+            <label for="">Cpf:</label>
+            <input required name="cpf" type="text" class="editarea">
+
+            <button type="submit" class="botao-cadastrar">Atualizar</button>
+            
+        </form>informacoes-editar -->
+
+
+    </div><!--container-->
 
     <script src="/script.js"></script>
 </body>
